tests/failTestsOut/dictFailSetValMismatch.out
Traceback (most recent call last):
  File "./typthonCompiler.py", line 71, in <module>
    typechecker.typecheck(root)
  File "C:\Users\liams\project\sprint4\typthonTypeChecker.py", line 11, in typecheck
    return getattr(self, method)(node, st)
  File "C:\Users\liams\project\sprint4\typthonTypeChecker.py", line 55, in check_File
    child_st = self.typecheck(child, global_st)
  File "C:\Users\liams\project\sprint4\typthonTypeChecker.py", line 11, in typecheck
    return getattr(self, method)(node, st)
  File "C:\Users\liams\project\sprint4\typthonTypeChecker.py", line 181, in check_StmtList
    stmtType = self.typecheck(stmt, st)
  File "C:\Users\liams\project\sprint4\typthonTypeChecker.py", line 11, in typecheck
    return getattr(self, method)(node, st)
  File "C:\Users\liams\project\sprint4\typthonTypeChecker.py", line 454, in check_DictBuiltinCall
    raise ParseError(f"Expected Value Type: {val_type}, but recieved Type {real_val_type} for dict {node.dictID}",
typthonSymbolTable.ParseError: ('Expected Value Type: int, but recieved Type str for dict x', 2)
